5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4065/executions/1602_2895.log
== TEST (2019-03-20 18:07:37) 
-- CODE:
var = float(input("quantidade de jogos: "))
val1= 20
val_f= 35
print(val1 , val_f)
-- OUTPUT:
20 35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 18:07:48) 
-- CODE:
var = float(input("quantidade de jogos: "))
val1= 20
val_f= 35
print(val1 , val_f)
-- EXECUTION TIME:
0.195892
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
20 35
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
20 35
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
20 35
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:10:20) 
-- CODE:
var = float(input("quantidade de jogos: "))
val1= 20
val_f= 35
print(val1 , val_f)
-- OUTPUT:
20 35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:14:47) 
-- CODE:
var = float(input("quantidade de jogos: "))
val1= 20
val_f= 35
total= float(val1,val_f)

print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total= float(val1,val_f)
TypeError: float() takes at most 1 argument (2 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:15:06) 
-- CODE:
var = float(input("quantidade de jogos: "))
val1= 20
val_f= 35
total= (val1+val_f)

print(total)
-- OUTPUT:
55
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 18:15:15) 
-- CODE:
var = float(input("quantidade de jogos: "))
val1= 20
val_f= 35
total= (val1+val_f)

print(total)
-- EXECUTION TIME:
0.161179
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
55
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
55
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
55
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:15:36) 
-- CODE:
var = float(input("quantidade de jogos: "))
val1= 20
val_f= 30
total= (val1+val_f)

print(total)
-- OUTPUT:
50
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:16:26) 
-- CODE:
var = float(input("quantidade de jogos: "))
val1= 20
val_f= 30
total= (var*val1+val_f)

print(total)
-- OUTPUT:
270.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 18:16:32) 
-- CODE:
var = float(input("quantidade de jogos: "))
val1= 20
val_f= 30
total= (var*val1+val_f)

print(total)
-- EXECUTION TIME:
0.209328
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
270.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
230.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
4950.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:17:06) 
-- CODE:
var = float(input("quantidade de jogos: "))
val1= 20
val_f= 30
total= float(var*val1+val_f)

print(total)
-- OUTPUT:
270.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 18:17:12) 
-- CODE:
var = float(input("quantidade de jogos: "))
val1= 20
val_f= 30
total= float(var*val1+val_f)

print(total)
-- EXECUTION TIME:
0.14854
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
270.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
230.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
4950.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:18:04) 
-- CODE:
var = float(input("quantidade de jogos: "))
val1= 20
val_f= 30
total= float(var*val1+val_f)

print(total)
-- OUTPUT:
270.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:18:14) 
-- CODE:
var = float(input("quantidade de jogos: "))
val1= 20
val_f= 30
total= float(var*val1+val_f)

print(total)
-- OUTPUT:
270.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 18:18:22) 
-- CODE:
var = float(input("quantidade de jogos: "))
val1= 20
val_f= 30
total= float(var*val1+val_f)

print(total)
-- EXECUTION TIME:
0.191307
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
270.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
230.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
4950.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:19:38) 
-- CODE:
var = float(input("quantidade de jogos: "))
val_f= float(input("valor do frete: "))
val1= 20

total= float(var*val1+val_f)

print(total)
-- OUTPUT:
285.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 18:19:48) 
-- CODE:
var = float(input("quantidade de jogos: "))
val_f= float(input("valor do frete: "))
val1= 20

total= float(var*val1+val_f)

print(total)
-- EXECUTION TIME:
0.199261
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
285.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
267.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
5895.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:20:32) 
-- CODE:
var = float(input("quantidade de jogos: "))
val1= 20
val_f= float(input("valor do frete: "))


total= float(var*val1+val_f)

print(total)
-- OUTPUT:
285.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 18:20:40) 
-- CODE:
var = float(input("quantidade de jogos: "))
val1= 20
val_f= float(input("valor do frete: "))


total= float(var*val1+val_f)

print(total)
-- EXECUTION TIME:
0.139684
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
285.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
267.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
5895.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:22:02) 
-- CODE:
var = float(input("quantidade de jogos: "))
val_f= float(input("valor do frete: "))

val1= 20

total= float(var*val1+val_f)

print(total)
-- OUTPUT:
285.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 18:22:11) 
-- CODE:
var = float(input("quantidade de jogos: "))
val_f= float(input("valor do frete: "))

val1= 20

total= float(var*val1+val_f)

print(total)
-- EXECUTION TIME:
0.214109
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
285.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
267.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
5895.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:24:03) 
-- CODE:
var = float(input("quantidade de jogos: "))
val_f= float(input("valor do frete: "))
val1= float(input("valor unitario do jogo: ")

total= float(var*val1+val_f)

print(total)
-- ERROR:
File "XXXX", line 5
    total= float(var*val1+val_f)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:25:15) 
-- CODE:
var = float(input("quantidade de jogos: "))
val_f= float(input("valor do frete: "))
val1= float(input("valor unitario do jogo: "))

total= float(var*val1+val_f)

print(total)
-- OUTPUT:
981.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 18:25:33) 
-- CODE:
var = float(input("quantidade de jogos: "))
val_f= float(input("valor do frete: "))
val1= float(input("valor unitario do jogo: "))

total= float(var*val1+val_f)

print(total)
-- EXECUTION TIME:
0.226216
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
981.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
1017.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
79941.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:26:14) 
-- CODE:
var = float(input("quantidade de jogos: "))
val_f= float(input("valor do frete: "))
val1= float(input("valor unitario do jogo: "))

total= float(var*val1+val_f)

print(total)
-- OUTPUT:
981.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:26:38) 
-- CODE:
var = float(input("quantidade de jogos: "))
val_f= float(input("valor do frete: "))
val1= float(input("valor unitario do jogo: "))

total= float(var*val1+val_f)

print(total)
-- OUTPUT:
981.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 18:26:48) 
-- CODE:
var = float(input("quantidade de jogos: "))
val_f= float(input("valor do frete: "))
val1= float(input("valor unitario do jogo: "))

total= float(var*val1+val_f)

print(total)
-- EXECUTION TIME:
0.146773
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
981.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
1017.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
79941.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:27:07) 
-- CODE:
var = float(input("quantidade de jogos: "))
val_f= float(input("valor do frete: "))
val1= 20
total= float(var*val1+val_f)

print(total)
-- OUTPUT:
285.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 18:27:20) 
-- CODE:
var = float(input("quantidade de jogos: "))
val_f= float(input("valor do frete: "))
val1= 20
total= float(var*val1+val_f)

print(total)
-- EXECUTION TIME:
0.166887
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
285.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
267.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
5895.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:28:18) 
-- CODE:
var = float(input("quantidade de jogos: "))
frete = float(input("valor do frete: "))
val1 = 20
total = float(var*val1 + frete)

print(total)
-- OUTPUT:
285.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 18:28:25) 
-- CODE:
var = float(input("quantidade de jogos: "))
frete = float(input("valor do frete: "))
val1 = 20
total = float(var*val1 + frete)

print(total)
-- EXECUTION TIME:
0.194419
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
285.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
267.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
5895.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:29:16) 
-- CODE:
var = float(input("quantidade de jogos: "))
frete = float(input("valor do frete: "))

val1 = 20
total = (var*val1 + frete)

print(total)
-- OUTPUT:
285.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 18:29:25) 
-- CODE:
var = float(input("quantidade de jogos: "))
frete = float(input("valor do frete: "))

val1 = 20
total = (var*val1 + frete)

print(total)
-- EXECUTION TIME:
0.0929229
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
285.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
267.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
5895.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:30:53) 
-- CODE:
var = float(input("quantidade de jogos: "))
frete = float(input("valor do frete: "))

val1 = 20
valor_total = float(val1 + frete)

print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(total)
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:31:13) 
-- CODE:
var = float(input("quantidade de jogos: "))
frete = float(input("valor do frete: "))

val1 = 20
valor_total = float(val1 + frete)

print(total_total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(total_total)
NameError: name 'total_total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:31:47) 
-- CODE:
var = float(input("quantidade de jogos: "))
frete = float(input("valor do frete: "))

val1 = 20
valor_total = float(val1 + frete)

print(valor_total)
-- OUTPUT:
65.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 18:31:55) 
-- CODE:
var = float(input("quantidade de jogos: "))
frete = float(input("valor do frete: "))

val1 = 20
valor_total = float(val1 + frete)

print(valor_total)
-- EXECUTION TIME:
0.140461
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
65.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
87.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
995.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 18:32:09) 
-- CODE:
var = float(input("quantidade de jogos: "))
frete = float(input("valor do frete: "))

val1 = 20
valor_total = float(var*val1 + frete)

print(valor_total)
-- EXECUTION TIME:
0.132256
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
285.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
267.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
5895.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:32:12) 
-- CODE:
var = float(input("quantidade de jogos: "))
frete = float(input("valor do frete: "))

val1 = 20
valor_total = float(var*val1 + frete)

print(valor_total)
-- OUTPUT:
285.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 18:32:20) 
-- CODE:
var = float(input("quantidade de jogos: "))
frete = float(input("valor do frete: "))

val1 = 20
valor_total = float(var*val1 + frete)

print(valor_total)
-- EXECUTION TIME:
0.14547
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
285.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
267.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
5895.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:43:07) 
-- CODE:
var = float(input("quantidade de jogos: "))
frete = float(input("valor do frete: "))

val1 = 20
valor_total = float(var*val1 + frete)

print(valor_total)
-- OUTPUT:
285.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 18:43:15) 
-- CODE:
var = float(input("quantidade de jogos: "))
frete = float(input("valor do frete: "))

val1 = 20
valor_total = float(var*val1 + frete)

print(valor_total)
-- EXECUTION TIME:
0.181091
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
285.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
267.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
5895.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:44:26) 
-- CODE:
var = int(input("quantidade de jogos: "))
frete = float(input("valor do frete: "))

val1 = 20
valor_total = float(var*val1 + frete)

print(valor_total)
-- OUTPUT:
285.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 18:44:35) 
-- CODE:
var = int(input("quantidade de jogos: "))
frete = float(input("valor do frete: "))

val1 = 20
valor_total = float(var*val1 + frete)

print(valor_total)
-- EXECUTION TIME:
0.174206
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
285.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
267.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
5895.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:45:15) 
-- CODE:
var = float(input("quantidade de jogos: "))
frete = float(input("valor do frete: "))


valor_total = float(var*val1 + frete)

print(valor_total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    valor_total = float(var*val1 + frete)
NameError: name 'val1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:46:22) 
-- CODE:
var = float(input("quantidade de jogos: "))
frete = float(input("valor do frete: "))

val1 = float("valor do jogo: ")
valor_total = float(var*val1 + frete)

print(valor_total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    val1 = float("valor do jogo: ")
ValueError: could not convert string to float: 'valor do jogo: '
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:47:04) 
-- CODE:
var = float(input("quantidade de jogos: "))
frete = float(input("valor do frete: "))

val1 = float(input("valor do jogo: "))
valor_total = float(var*val1 + frete)

print(valor_total)
-- OUTPUT:
981.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 18:47:13) 
-- CODE:
var = float(input("quantidade de jogos: "))
frete = float(input("valor do frete: "))

val1 = float(input("valor do jogo: "))
valor_total = float(var*val1 + frete)

print(valor_total)
-- EXECUTION TIME:
0.215546
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
981.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
1017.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
79941.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:48:29) 
-- CODE:
var = float(input("quantidade de jogos: "))
frete = float(input("valor do frete: "))
val1 = float(input("valor do jogo: "))

valor_total =(var*val1 + frete)

print(valor_total)
-- OUTPUT:
981.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 18:48:38) 
-- CODE:
var = float(input("quantidade de jogos: "))
frete = float(input("valor do frete: "))
val1 = float(input("valor do jogo: "))

valor_total =(var*val1 + frete)

print(valor_total)
-- EXECUTION TIME:
0.138475
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
981.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
1017.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
79941.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:51:24) 
-- CODE:
var = float(input("quantidade de jogos: "))
frete = float(input("valor do frete: "))
val1 = float(input("valor do jogo: "))

valor_total =(var*val1 + frete)

print(valor_total)
-- OUTPUT:
981.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 18:51:34) 
-- CODE:
var = float(input("quantidade de jogos: "))
frete = float(input("valor do frete: "))
val1 = float(input("valor do jogo: "))

valor_total =(var*val1 + frete)

print(valor_total)
-- EXECUTION TIME:
0.146925
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
981.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
1017.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
79941.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:52:01) 
-- CODE:
var = int(input("quantidade de jogos: "))
frete = float(input("valor do frete: "))
val1 = float(input("valor do jogo: "))

valor_total =(var*val1 + frete)

print(valor_total)
-- OUTPUT:
981.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 18:52:10) 
-- CODE:
var = int(input("quantidade de jogos: "))
frete = float(input("valor do frete: "))
val1 = float(input("valor do jogo: "))

valor_total =(var*val1 + frete)

print(valor_total)
-- EXECUTION TIME:
0.109117
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
981.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
1017.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
79941.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:52:27) 
-- CODE:
var = int(input("quantidade de jogos: "))
frete = float(input("valor do frete: "))
val1 = float(input("valor do jogo: "))

valor_total = float(var*val1 + frete)

print(valor_total)
-- OUTPUT:
981.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 18:52:36) 
-- CODE:
var = int(input("quantidade de jogos: "))
frete = float(input("valor do frete: "))
val1 = float(input("valor do jogo: "))

valor_total = float(var*val1 + frete)

print(valor_total)
-- EXECUTION TIME:
0.129273
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
981.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
1017.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
79941.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:53:18) 
-- CODE:
var = int(input("quantidade de jogos: "))
frete = input("valor do frete: "))
val1 = input("valor do jogo: "))

valor_total = float(var*val1 + frete)

print(valor_total)
-- ERROR:
File "XXXX", line 2
    frete = input())
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:53:27) 
-- CODE:
var = int(input("quantidade de jogos: "))
frete = input("valor do frete: ")
val1 = input("valor do jogo: ")

valor_total = float(var*val1 + frete)

print(valor_total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    valor_total = float(var*val1 + frete)
ValueError: could not convert string to float: '78.078.078.078.078.078.078.078.078.078.078.078.045.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 18:53:39) 
-- CODE:
var = int(input("quantidade de jogos: "))
frete = input("valor do frete: ")
val1 = input("valor do jogo: ")

valor_total = float(var*val1 + frete)

print(valor_total)
-- EXECUTION TIME:
0.17904
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/2895/main.py", line 5, in <module>
    valor_total = float(var*val1 + frete)
ValueError: could not convert string to float: '78.078.078.078.078.078.078.078.078.078.078.078.045.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:55:01) 
-- CODE:
var = int(input("quantidade de jogos: "))
frete = float(input("valor do frete: "))
val1 = float(input("valor do jogo: "))

valor_total = float(var*val1 + frete)

print(valor_total)
-- OUTPUT:
981.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:55:40) 
-- CODE:
var = int(input("quantidade de jogos: "))
frete = float(input("valor do frete: "))
val1 = float(input("valor do jogo: "))

valor_total = float(var*val1 + frete)

print(valor_total)
-- OUTPUT:
981.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 18:55:57) 
-- CODE:
var = int(input("quantidade de jogos: "))
frete = float(input("valor do frete: "))
val1 = float(input("valor do jogo: "))

valor_total = float(var*val1 + frete)

print(valor_total)
-- EXECUTION TIME:
0.152876
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
981.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
1017.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
79941.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:56:25) 
-- CODE:
var = int(input("quantidade de jogos: "))
frete = float(input("valor do frete: "))
val1 = float(input("valor do jogo: "))

valor_total = float(var*val1 + frete)

print(valor_total)
-- OUTPUT:
981.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:57:45) 
-- CODE:
qtd = int(input("quantidade de jogos: "))
frete = float(input("valor do frete: "))
valor = float(input("valor do jogo: "))

valor_total = float(valor*qtd  + frete)

print(valor_total)
-- OUTPUT:
981.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 18:58:34) 
-- CODE:
qtd = int(input("quantidade de jogos: "))
frete = float(input("valor do frete: "))
valor = float(input("valor do jogo: "))

valor_total = float(valor*qtd  + frete)

print(valor_total)
-- EXECUTION TIME:
0.25939
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
981.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
1017.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
79941.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:58:42) 
-- CODE:
qtd = int(input("quantidade de jogos: "))
frete = float(input("valor do frete: "))
valor = float(input("valor do jogo: "))

valor_total = float(valor*qtd  + frete)

print(valor_total)
-- OUTPUT:
981.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:58:56) 
-- CODE:
qtd = int(input("quantidade de jogos: "))
frete = float(input("valor do frete: "))
valor = float(input("valor do jogo: "))

valor_total = float(valor*qtd  + frete)

print(valor_total)
-- OUTPUT:
981.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:59:27) 
-- CODE:
qtd = int(input("quantidade de jogos: "))
valor = float(input("valor do jogo: "))
frete = float(input("valor do frete: "))

valor_total = float(valor*qtd  + frete)

print(valor_total)
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 18:59:46) 
-- CODE:
qtd = int(input("quantidade de jogos: "))
valor = float(input("valor do jogo: "))
frete = float(input("valor do frete: "))

valor_total = float(valor*qtd  + frete)

print(valor_total)
-- EXECUTION TIME:
0.146118
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 03:35:27) 
-- CODE:
qtd = int(input("quantidade de jogos: "))
valor = float(input("valor do jogo: "))
frete = float(input("valor do frete: "))

valor_total = float(valor*qtd  + frete)

print(valor_total)
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 03:35:40) 
-- CODE:
qtd = int(input("quantidade de jogos: "))
valor = float(input("valor do jogo: "))
frete = float(input("valor do frete: "))

valor_total = float(valor*qtd  + frete)

print(valor_total)
-- EXECUTION TIME:
0.175371
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 23:16:43) 
-- CODE:
qtd = int(input("quantidade de jogos: "))
valor = float(input("valor do jogo: "))
frete = float(input("valor do frete: "))

valor_total = float(valor*qtd  + frete)

print(valor_total)
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 23:16:58) 
-- CODE:
qtd = int(input("quantidade de jogos: "))
valor = float(input("valor do jogo: "))
frete = float(input("valor do frete: "))

valor_total = float(valor*qtd  + frete)

print(valor_total)
-- EXECUTION TIME:
0.185906
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
